[gd_scene load_steps=2 format=3 uid="uid://cqmoaecjrose6"]

[ext_resource type="Script" uid="uid://db8hekg0ki6l5" path="res://pause_menu.gd" id="1_hdmo1"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 453.5
offset_right = 1080.0
offset_bottom = 626.76
pivot_offset = Vector2(120, 86.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
